# algo1-tpi

./: .gitignore  README.txt  salaDeReuniones.tex
UtilesPython/: transcripts_all.txt  txt2wav.py
src/: CMakeLists.txt  Funciones_TPI.cpp  Funciones_TPI.h  definiciones.h  ejercicios.h  solucion.cpp
src/datos/: habla_spkr0.txt  habla_spkr1.txt  habla_spkr2.txt  habla_spkr3.txt  habla_spkr4.txt  habla_spkr5.txt  habla_spkrdefault.txt
src/tests/: ardillizarTEST.cpp  compararSilenciosTEST.cpp  distanciasTEST.cpp  elAcaparadorTEST.cpp  encontrarAparicionTEST.cpp  grabacionValidaTEST.cpp  silenciosTEST.cpp
